-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.1, 12
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8216000 | 13 | Andrew Haley | P3 | Resolved | Fixed | b03 |
| JDK-8216122 | 12.0.1 | Andrew Haley | P3 | Resolved | Fixed | master |
| JDK-8248557 | 11.0.9-oracle | Andrew Haley | P3 | Resolved | Fixed | b01 |
| JDK-8230239 | 11.0.5 | Andrew Haley | P3 | Resolved | Fixed | b05 |
during execution of ReservedStackAccess annotated method it might happen that reserved pages are reguarded while yellow pages left unguarded. At the same time the state of stack guard is recorded as fully protected (stack_guard_enabled). Subsequent execution of ReservedStackAccess annotated method then may lead to VM crash instead of mere StackOverflowError.
Reproduced with ReservedStackTestCompiler jtreg test on aarch32-jdk11 port codebase. The bug seem to be apparent and exists in aarch64-port as well
Reproduced with ReservedStackTestCompiler jtreg test on aarch32-jdk11 port codebase. The bug seem to be apparent and exists in aarch64-port as well
- backported by
-
JDK-8216000 Aarch64: ReservedStackAccess may leave stack guard in inconsistent state
-
- Resolved
-
-
JDK-8216122 Aarch64: ReservedStackAccess may leave stack guard in inconsistent state
-
- Resolved
-
-
JDK-8230239 Aarch64: ReservedStackAccess may leave stack guard in inconsistent state
-
- Resolved
-
-
JDK-8248557 Aarch64: ReservedStackAccess may leave stack guard in inconsistent state
-
- Resolved
-